dynamically updating net worth

--- a/templates/index.html
+++ b/templates/index.html
@@ -182,7 +182,7 @@
                                             <td class="text-end"></td>
                                         </tr>
                                         <tr class="table-primary">
-                                            <th><strong>Net Worth</strong></th>
+                                            <th><strong class="net-worth-label">Net Worth</strong></th>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
