--- a/templates/index.html
+++ b/templates/index.html
@@ -407,6 +407,10 @@
                                         </div>
                                     </div>
                                 </div>
+                                <!-- Add mobile navigation button -->
+                                <button class="mobile-nav-button" onclick="document.querySelector('.input-section').scrollIntoView({behavior: 'smooth'})">
+                                    Change Parameters
+                                </button>
                             </div>
                             <!-- Keep existing table for desktop -->
                             <div class="table-container">
