added minor text changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
                                 <ul class="assumptions-list">
                                     <li>
                                         <strong>Investment returns:</strong> Any surplus income after expenses and rent/mortgage payments is invested at the 
-                                        <span class="variable-highlight">Investment Return Rate</span>. Use bank interest rate if not planning to invest.
+                                        <span class="variable-highlight">Investment Return Rate</span>. The average return rate is 9% for US stock market. Use bank interest rate if not planning to invest.
                                     </li>
                                     <li>
                                         <strong>Income and rent growth:</strong> Both disposable income (<span class="variable-highlight">Monthly Savings</span> + 
